--- a/src/js/components/hand/hand.html
+++ b/src/js/components/hand/hand.html
@@ -1,3 +1,3 @@
-<div ng-repeat="card in vm.hand">
-  <img ng-src="{{ card.image }}" />
-</div>
+<img ng-src="{{ card.image }}"
+  style="width: 31%; margin: 1rem 1%;" 
+  ng-repeat="card in vm.hand" />
